--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -21,107 +21,63 @@
             class="app__header header-app d-flex flex-nowrap justify-content-between align-items-center mb-3"
           >
             <h1 class="header-app__title p-0 m-0">Todo List</h1>
-            <p class="header-app__lead lead-header-app p-0 m-0">
+            <p class="header-app__lead lead-header-app js-lead p-0 m-0">
               <em
-                ><span><strong>0</strong></span> more to do,
-                <span><strong>0</strong></span> done</em
+                ><span class="lead-header-app__accent lead-header-app__accent--active"><strong>0</strong></span> more to do,
+                <span class="lead-header-app__accent lead-header-app__accent--done"><strong>0</strong></span> done</em
               >
             </p>
           </section>
           <div class="app__filter filter-app d-flex flex-nowrap mb-3">
             <form
-              class="d-flex flex-row justify-content-between align-items-center w-100 mr-2"
+              class="filter-app__search d-flex flex-row justify-content-between align-items-center w-100 mr-2"
             >
               <input
-                class="form-control filter-app__search d-flex flex-grow-1 border-secondary"
+                class="filter-app__search-input form-control d-flex flex-grow-1 border-secondary"
+                name="search"
                 type="text"
                 placeholder="type smth to start searching…"
                 autocomplete="off"
               />
             </form>
             <div
-              class="btn-group filter-app__category category-filter-app d-flex ml-auto"
+              class="filter-app__categories btn-group d-flex ml-auto"
               role="group"
             >
               <button
-                class="btn btn-outline-secondary category-filter-app--all"
+                class="filter-app__category filter-app__category--all btn btn-outline-secondary active"
               >
                 All
               </button>
               <button
-                class="btn btn-outline-secondary category-filter-app--active"
+                class="filter-app__category filter-app__category--is-active btn btn-outline-secondary"
               >
                 Active
               </button>
               <button
-                class="btn btn-outline-secondary category-filter-app--completed"
+                class="filter-app__category filter-app__category--is-done btn btn-outline-secondary"
               >
                 Done
               </button>
             </div>
           </div>
-          <ul class="mb-3 list-group app__todo-list todo-list-app">
-            <li
-              class="list-group-item list-group-item-action d-flex justify-content-between align-items-center todo-list-app__item"
-              style="cursor: pointer;"
-            >
-              <p class="todo-list-app__text p-0 m-0">
-                Take a shower
-              </p>
-              <div class="btn-group">
-                <button class="btn btn-outline-secondary">
-                  <i class="fa fa-trash"></i>
-                </button>
-                <button class="btn btn-outline-secondary">
-                  <i class="fa fa-edit"></i>
-                </button>
-              </div>
-            </li>
-            <li
-              class="list-group-item list-group-item-action d-flex justify-content-between align-items-center todo-list-app__item"
-              style="cursor: pointer;"
-            >
-              <p class="todo-list-app__text p-0 m-0">
-                Drink coffee
-              </p>
-              <div class="btn-group">
-                <button class="btn btn-outline-secondary">
-                  <i class="fa fa-trash"></i>
-                </button>
-                <button class="btn btn-outline-secondary">
-                  <i class="fa fa-edit"></i>
-                </button>
-              </div>
-            </li>
-            <li
-              class="list-group-item list-group-item-action d-flex justify-content-between align-items-center todo-list-app__item"
-              style="cursor: pointer;"
-            >
-              <p class="todo-list-app__text p-0 m-0">
-                Prepare breakfast
-              </p>
-              <div class="btn-group">
-                <button class="btn btn-outline-secondary">
-                  <i class="fa fa-trash"></i>
-                </button>
-                <button class="btn btn-outline-secondary">
-                  <i class="fa fa-edit"></i>
-                </button>
-              </div>
-            </li>
-          </ul>
 
-          <form class="app__form form-app">
+          <div
+            class="app__todo-list todo-list-app js-list d-flex justify-content-center align-items-center mb-3"
+          ></div>
+
+          <form class="app__add-item add-item-app">
             <div class="input-group">
               <input
-                class="form-control form-app__add-todo-list-item-input d-flex flex-grow-1 border-secondary"
+                class="add-item-app__input form-control d-flex flex-grow-1 border-secondary"
+                name="new-list-item"
                 type="text"
                 placeholder="What needs to be done?"
                 autocomplete="off"
               />
               <div class="input-group-append">
                 <button
-                  class="btn btn-outline-secondary form-app__add-todo-list-item-button"
+                  class="add-item-app__submit btn btn-outline-secondary"
                   type="submit"
                 >
                   Add
